crates/graphcal-project/tests/snapshots/error_snapshots__error_convert_dynamic_target_zero_scale.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
convert_dynamic_target_zero_scale.bad: display scale unavailable in convert_dynamic_target_zero_scale.gcl: dynamic unit scale must be greater than zero, got 0 (SI value retained)
