crates/graphcal-project/tests/snapshots/error_snapshots__error_datetime_domain_runtime_bound.snap
---
source: crates/graphcal-project/tests/error_snapshots.rs
expression: rendered
---
graph reference `@start` not allowed in const expression
    Diagnostic severity: error
Begin snippet for datetime_domain_runtime_bound.gcl starting at line 2, column 1

snippet line 2: param start: Datetime = datetime("2024-01-01T00:00:00Z");
snippet line 3: param event: Datetime(min: @start) = datetime("2024-06-01T00:00:00Z");
    label at line 3, columns 28 to 33: @ reference not allowed here
diagnostic help: const expressions are evaluated at compile time and cannot reference params or nodes
diagnostic code: graphcal::N005
